<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InputFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="@dimen/view_pager_full_name_margin_top"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupGender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:text="@string/full_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_sample"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="textPersonName|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxHasAlphaAccount"
            app:layout_constraintStart_toStartOf="@+id/fullName"
            app:layout_constraintTop_toBottomOf="@+id/fullName">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/gender" />

            <RadioButton
                android:id="@+id/radioGenderMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_man" />

            <RadioButton
                android:id="@+id/radioGenderWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_woman" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBoxHasAlphaAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/alpha_account"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxHasSigmaAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

        <CheckBox
            android:id="@+id/checkBoxHasSigmaAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/sigma_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/checkBoxHasAlphaAccount"
            app:layout_constraintTop_toTopOf="@+id/checkBoxHasAlphaAccount" />

        <CheckBox
            android:id="@+id/checkBoxHasComputer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_provided"
            app:layout_constraintBottom_toTopOf="@+id/buttonAddTrainee"
            app:layout_constraintStart_toStartOf="@+id/checkBoxHasAlphaAccount"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxHasAlphaAccount" />

        <Button
            android:id="@+id/buttonAddTrainee"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:enabled="false"
            android:text="@string/add_trainee"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxHasComputer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
