<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/view_pager_padding">

    <TextView
        android:id="@+id/traineeNumberLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trainee_number_label"
        app:layout_constraintBottom_toTopOf="@+id/fullNameLabelInfoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fullNameLabelInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        app:layout_constraintBottom_toTopOf="@+id/genderInfoLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/traineeNumberLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/traineeNumberLabelTextView" />

    <TextView
        android:id="@+id/genderInfoLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintBottom_toTopOf="@+id/providedLabel"
        app:layout_constraintStart_toStartOf="@+id/fullNameLabelInfoTextView"
        app:layout_constraintTop_toBottomOf="@+id/fullNameLabelInfoTextView" />

    <TextView
        android:id="@+id/providedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/provided_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/genderInfoLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/genderInfoLabelTextView" />

    <TextView
        android:id="@+id/traineeNumberTextView"
        style="@style/InfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_pager_margin_start"
        app:layout_constraintBottom_toBottomOf="@+id/traineeNumberLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/traineeNumberLabelTextView" />

    <TextView
        android:id="@+id/fullNameSampleInfoTextView"
        style="@style/InfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_pager_margin_start"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/fullNameLabelInfoTextView" />

    <TextView
        android:id="@+id/genderInfoTextView"
        style="@style/InfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_pager_margin_start"
        app:layout_constraintBottom_toBottomOf="@+id/genderInfoLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/genderInfoLabelTextView" />

    <TextView
        android:id="@+id/alphaAccountInfoTextView"
        style="@style/InfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_pager_margin_start"
        android:text="@string/alpha_account"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/providedLabel" />

    <TextView
        android:id="@+id/sigmaAccountInfoTextView"
        style="@style/InfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_pager_margin_start"
        android:text="@string/sigma_account"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/alphaAccountInfoTextView" />

    <TextView
        android:id="@+id/workComputerInfoTextView"
        style="@style/InfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_pager_margin_start"
        android:text="@string/work_computer"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/sigmaAccountInfoTextView" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="providedLabel, traineeNumberLabelTextView,
        fullNameLabelInfoTextView, genderInfoLabelTextView"
        app:layout_constraintStart_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>